# thunderbot

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.claude/commands/: prime.md
.claude/scripts/: check_env.py
.claude/skills/: README.md
.claude/skills/firecrawl/: SKILL.md
.claude/skills/firecrawl/firecrawl_cli/: pyproject.toml
.claude/skills/firecrawl/firecrawl_cli/src/: __init__.py  main.py
.claude/skills/image-gen/: SKILL.md
.claude/skills/image-gen/image_gen_cli/: pyproject.toml
.claude/skills/image-gen/image_gen_cli/src/: main.py
.claude/skills/internet-search/search_cli/: pyproject.toml
.claude/skills/internet-search/search_cli/src/: __init__.py  main.py
.claude/skills/playwright/: SKILL.md
config/: clans.json
docs/: EMOJI_SYNC.md  SANCTUM_ELEMENTS.md  STORM_SANCTUM_DESIGN.md
src/: deploy-commands.ts  index.ts
src/commands/: clan-grant-access.ts  clan-join-request.ts  clan-join.ts  clan-leave.ts  clan-revoke-access.ts  di-clan-signup.ts  grant-clan-access.ts  ping.ts  revoke-clan-access.ts
src/config/: class-emojis.ts
src/events/: clan-request-button.ts  di-clan-signup-button.ts  guild-member-add.ts  interaction-create.ts  ready.ts
src/types/: clan.ts
src/utils/: config.ts
