[project]
name = "firecrawl-cli"
version = "1.0.0"
description = "Web scraping and URL discovery CLI powered by Firecrawl"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "firecrawl-py>=2.0.0",
]

[project.scripts]
fc = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
