[project]
name = "image-gen-cli"
version = "1.0.0"
description = "Image generation CLI powered by OpenAI GPT Image"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
img = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
